--- a/src/Components/Content/AddButton/add-button.css
+++ b/src/Components/Content/AddButton/add-button.css
@@ -1,7 +1,8 @@
 .add-button{
   position: relative;
+  display: block;
   font-size: 30px;
   padding: 10px 25px;
-  margin: 20px;
+  margin: 2% 40%;
   
 }
