--- a/src/Components/Content/content.css
+++ b/src/Components/Content/content.css
@@ -1,6 +1,6 @@
 .content{
   display: grid;
   border: solid grey 2px;
-  justify-items: center;
+  /* justify-items: center; */
   margin: 0% 10%;
 }
