--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -3,4 +3,8 @@
   margin-bottom: 2%;
   margin-top: 2%;
   font-size: 50px;
+  font-family: RubikBubbles-Regular;
+  font-weight: 1;
+  letter-spacing: 0px;
+  word-spacing: 15px;
 }
