--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,20 @@
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue','Pacifico'
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@font-face {
+  font-family: 'PermanentMarker-Regular';
+  src: local('PermanentMarker-Regular'), url(../font/PermanentMarker-Regular.ttf) format('trueType');
+}
+
+@font-face {
+  font-family: 'RubikBubbles-Regular';
+  src: local('RubikBubbles-Regular'), url(../font/RubikBubbles-Regular.ttf) format('trueType');
 }
 
 code {
