--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,4 +1,4 @@
-.header{
+.header {
   text-align: center;
   margin-bottom: 2%;
   margin-top: 2%;
@@ -7,5 +7,10 @@
   font-weight: 1;
   letter-spacing: 0px;
   word-spacing: 15px;
-  color: aqua;
+  /* color: aqua; */
+  cursor: default;
+  background-image: linear-gradient(to left, #980000, #984500, #a77f03,#004b83,#44110A);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  
 }
