--- a/src/Components/Content/AddButton/add-button.css
+++ b/src/Components/Content/AddButton/add-button.css
@@ -1,8 +1,22 @@
 .add-button{
   position: relative;
-  display: block;
   font-size: 30px;
   padding: 10px 25px;
-  margin: 2% 40%;
-  
+  margin: 2% 40%; 
+  border: none;
+  background-image: linear-gradient(to left, #484baa 0%, #395212  51%, #3d3a0b  100%);
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: #a77f03;
+  font-weight: bold;
+  box-shadow: 0 0 20px #eee;
+  border-radius: 20px;
+}
+
+.add-button:hover {
+  background-position: right center;
+  color: #fff;
+  text-decoration: none;
+  box-shadow: 0px 15px 20px #813a31;
+  transform: translateY(-7px);
 }
