--- a/src/Components/Content/content.css
+++ b/src/Components/Content/content.css
@@ -1,8 +1,6 @@
-.content{
+.content {
   display: grid;
   border: solid grey 2px;
-  /* justify-items: center; */
   margin: 0% 10%;
-  background: rgb(184,198,219);
-background: radial-gradient(circle, rgba(184,198,219,1) 28%, rgba(245,247,250,1) 85%);
+  background-color: whitesmoke;
 }
