--- a/src/Components/Content/content.css
+++ b/src/Components/Content/content.css
@@ -1,6 +1,7 @@
 .content {
   display: grid;
-  border: solid grey 2px;
+  border-radius: 10px;
   margin: 0% 10%;
   background-color: whitesmoke;
+  border: double 10px #06273c;
 }
