--- a/src/Components/Content/RenderData/AllTodo/Icons/icons.css
+++ b/src/Components/Content/RenderData/AllTodo/Icons/icons.css
@@ -1,7 +1,5 @@
-.edit-button{
+.icon-button {
   float: right;
-}
-
-.delete-button{
-  float: right;
+  margin-left: 5px;
+  margin-right: 80px;
 }
