--- a/src/Components/Content/RenderData/AllTodo/all-todo.css
+++ b/src/Components/Content/RenderData/AllTodo/all-todo.css
@@ -1,10 +1,21 @@
 .all-todo{
-  position: absolute;
+  position: relative;
   display: grid;
   font-size: 20px;
-  border: solid black 2px;
-  margin: 1% 8% 1% 2%;
-  padding: 3px;
-  /* padding-right: 100px; */
+  margin: 10px 0px 10px 60px;
+  padding: 5px;
+  padding-left: 10px;
+  background-color: #B7C4CF;
   width: 85%;
+  font-family:Sono-VariableFont_MONO;
+  letter-spacing: 0px;
+  word-spacing: 0px;
+  border-radius: 10px;
+  font-weight: bold;
+}
+
+.done{
+  position:absolute;
+  margin: 2px 12px;
+  cursor: pointer;
 }
