--- a/src/Components/Content/RenderData/render-data.css
+++ b/src/Components/Content/RenderData/render-data.css
@@ -1,6 +1,5 @@
 .render-data {
-  border: solid black 2px;
+  border: dotted #6b6522 5px;
   position: relative;
-  /* padding: 0% 40% ; */
   margin: 2%;
 }
