--- a/src/Components/Content/RenderData/AllTodo/all-todo.css
+++ b/src/Components/Content/RenderData/AllTodo/all-todo.css
@@ -1,21 +1,95 @@
-.all-todo{
+.all-todo {
   position: relative;
   display: grid;
   font-size: 20px;
-  margin: 10px 0px 10px 60px;
+  margin-left: 60px;
+  margin-top: 15px;
   padding: 5px;
   padding-left: 10px;
   background-color: #B7C4CF;
-  width: 85%;
-  font-family:Sono-VariableFont_MONO;
+  width: 82%;
+  font-family: Sono-VariableFont_MONO;
   letter-spacing: 0px;
   word-spacing: 0px;
   border-radius: 10px;
   font-weight: bold;
 }
 
-.done{
-  position:absolute;
+.done {
+  position: absolute;
   margin: 2px 12px;
   cursor: pointer;
+}
+
+.delete-button {
+  font-family: Sono-VariableFont_MONO;
+  font-size: 15px;
+  float: right;
+  margin-top: 2px;
+  margin-right: 15px;
+  padding: 4px;
+  font-weight: bold;
+  transform: translateX(-4px);
+  transition: 0.3s;
+  background-color: #E0144C;
+  color: white;
+  border: solid #DD5353 2px;
+  border-radius: 10px;
+}
+
+.delete-button:hover{
+  transform: translateX(+4px);
+  box-shadow: 0px 5px 20px red;
+  /* opacity: 0.5; */
+}
+
+.delete-button:focus{
+  transform: translateX(100px);
+  /* opacity: 100%; */
+  opacity: 0;
+}
+
+.edit-button {
+  font-family: Sono-VariableFont_MONO;
+  font-size: 15px;
+  float: right;
+  margin-top: 2px;
+  margin-right: 20px;
+  padding: 4px;
+  /* padding-bottom: 4px; */
+  font-weight: bold;
+  transform: translateX(-4px);
+  transition: 0.3s;
+  border-radius: 10px;
+  background-color: #2146C7;
+  color: white;
+  border: solid #2146C7 2px;
+  /* display: none; */
+}
+
+.edit-text{
+  /* font-size: 10px; */
+  /* text-indent: 100%; */
+    /* white-space: nowrap; */
+    /* overflow: hidden; */
+    /* display: none; */
+    /* margin-bottom: 10px; */
+    /* padding-bottom: -10px; */
+
+}
+
+.edit-text:hover{
+  /* display: none; */
+  /* display: block; */
+}
+
+.edit-button:hover{
+  transform: translateX(+4px);
+  box-shadow: 0px 5px 20px blue;
+  display: block;
+}
+
+.edit-button:focus{
+  transform: translateX(-100px);
+  opacity: 0;
 }
