--- a/src/Components/Content/Input/input.css
+++ b/src/Components/Content/Input/input.css
@@ -9,6 +9,8 @@
   font-family: PermanentMarker-Regular;
   padding-left: 20px;
   letter-spacing: 3px;
+  text-decoration:none;
+display:inline-block;
 }
 
 input::placeholder{
