css and input set in array

--- a/src/Components/Content/Input/Calender/calender.css
+++ b/src/Components/Content/Input/Calender/calender.css
@@ -3,7 +3,7 @@
   /* background-color: #89C4F4; */
   margin-left: 39%;
   margin-top: 2%;
-  margin-right: auto;
+  margin-right: 39%;
 }
 
 input.css-nxo287-MuiInputBase-input-MuiOutlinedInput-input {
