--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -1,12 +1,12 @@
 .header {
   text-align: center;
-  margin-bottom: 2%;
-  margin-top: 2%;
+  margin-bottom: 1em;
+  margin-top: 0.6em;
   font-size: 50px;
   font-family: RubikBubbles-Regular;
   font-weight: 1;
-  letter-spacing: 0px;
-  word-spacing: 15px;
+  letter-spacing: 0em;
+  word-spacing: 1rem;
   background-image: linear-gradient(to left, #980000, #984500, #a77f03,#004b83,#44110A);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
