--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -2,7 +2,7 @@
   text-align: center;
   margin-bottom: 1em;
   margin-top: 0.6em;
-  font-size: 50px;
+  font-size: 3rem;
   font-family: RubikBubbles-Regular;
   font-weight: 1;
   letter-spacing: 0em;
