style for content.scss

--- a/src/Components/Content/content.scss
+++ b/src/Components/Content/content.scss
@@ -1,8 +1,8 @@
 .content {
   position: relative;
   display: grid;
-  border-radius: 10px;
-  margin: 0% 10%;
+  border-radius: 0.8em;
+  margin: 0rem 5rem;
   background-color: whitesmoke;
-  border: double 10px #06273c;
+  border: double 0.6em #06273c;
 }
