--- a/src/Components/Content/Input/input.scss
+++ b/src/Components/Content/Input/input.scss
@@ -2,15 +2,14 @@
   position: relative;
   width: 50%;
   height: 40px;
-  margin: 2%;
-  margin-left: 25%;
-  margin-bottom: 10px;
-  font-size: 24px;
+  margin-top: 2em;
+  margin-left: 24%;
+  margin-bottom: 0.05em;
+  font-size: 1.25em;
   font-family: PermanentMarker-Regular;
-  padding-left: 20px;
+  padding-left: 1.25em;
   letter-spacing: 3px;
   text-decoration:none;
-display:inline-block;
 }
 
 input::placeholder{
