--- a/src/Components/Content/Input/Calender/calender.scss
+++ b/src/Components/Content/Input/Calender/calender.scss
@@ -1,9 +1,9 @@
 .calender {
   background-color: beige;
   /* background-color: #89C4F4; */
-  margin-left: 39%;
-  margin-top: 2%;
-  margin-right: 39%;
+  margin-left: 40%;
+  margin-top: 2em;
+  margin-right: 43%;
 }
 
 input.css-nxo287-MuiInputBase-input-MuiOutlinedInput-input {
