--- a/src/Components/Content/AddButton/add-button.scss
+++ b/src/Components/Content/AddButton/add-button.scss
@@ -2,10 +2,9 @@
   position: relative;
   font-size: 1.875em;
   padding: 0.40rem 3rem;
-  // margin: 2em 41.6%; 
   margin-top: 1.2em;
   margin-bottom: 1.2em;
-  // margin-left: 50vw;
+  margin-left: 28%;
   border: none;
   background-image: linear-gradient(to left, #484baa 0%, #395212  51%, #3d3a0b  100%);
   transition: 0.3s;
@@ -24,4 +23,10 @@
 .add-button:focus {
   transform: translateY(+4px);
   box-shadow: 10px 0px 20px 0px  #813a31;
+}
+
+@media only screen and (min-width: 1200px) {
+  .add-button{
+    margin-left: 43.8%;
+  }
 }
