--- a/src/Components/Content/RenderData/AllTodo/all-todo.scss
+++ b/src/Components/Content/RenderData/AllTodo/all-todo.scss
@@ -1,12 +1,12 @@
 .all-todo {
   position: relative;
   display: grid;
-  font-size: 1.25em;
-  margin-left: 3.75em;
+  font-size: 20px;
+  margin-left: 70px;
   margin-top: 0.93em;
   padding: 0.31em;
   // padding-left: 400px;
-  background-color: #B7C4CF;
+  // background-color: #B7C4CF;
   width: 0.82em;
   font-family: Sono-VariableFont_MONO;
   letter-spacing: 0em;
@@ -17,7 +17,7 @@
 
 .done {
   position: absolute;
-  margin: 0.12em 0.75em;
+  margin: 1px 20px;
   cursor: pointer;
 }
 
@@ -37,7 +37,7 @@
 }
 
 .delete-button:hover{
-  transform: translateX(0.25em);
+  transform: translateX(4px);
   box-shadow: 0em 0.3125em 1.25em red;
   opacity: 0.9;
 }
@@ -55,7 +55,7 @@
   margin-right: 1.25em;
   padding: 0.25em;
   font-weight: bold;
-  transform: translateX(-0.25em);
+  transform: translateX(-4px);
   transition: 0.3s;
   border-radius: 0.625em;
   background-color: #2146C7;
@@ -64,7 +64,7 @@
 }
 
 .edit-button:hover{
-  transform: translateX(+0.25em);
+  transform: translateX(+4px);
   box-shadow: 0em 0.3125em 1.25em blue;
   display: block;
 }
@@ -76,28 +76,27 @@
 
 .date{
   position: absolute;
-  // margin-top: 0.003em;
-  // margin-left: 0.92em;
+  margin: unset;
+  // margin-left: 1000px;
+  padding-left: 100%;;
   font-size: 0.75em;
   transition: 0.2s;
 }
 
 .date:hover{
-  font-size: 1.25em;
-  transform: translateX(-3.125em);
+  font-size: 20px;
+  transform: translateX(-10px);
 }
 
 .time{
   position: absolute;
-  // margin-left: 0.94em;
-  
-  // margin-top: 0.016em;
   font-size: 0.75em;
   transition: 0.2s;
+  margin-left: 10%;
 }
 
 .time:hover{
   font-size: 1.25em;
-  transform: translateX(-1.25em);
-  transform: translateY(-0.3125em);
+  transform: translateX(-20px);
+  transform: translateY(-5px);
 }
