--- a/src/Components/Content/RenderData/AllTodo/all-todo.scss
+++ b/src/Components/Content/RenderData/AllTodo/all-todo.scss
@@ -3,10 +3,7 @@
   display: grid;
   font-size: 20px;
   margin-left: 70px;
-  margin-top: 0.93em;
   padding: 0.31em;
-  // padding-left: 400px;
-  // background-color: #B7C4CF;
   width: 0.82em;
   font-family: Sono-VariableFont_MONO;
   letter-spacing: 0em;
@@ -15,17 +12,34 @@
   font-weight: bold;
 }
 
-.done {
+.todo-text{
+  background-color: #B7C4CF;
+  padding: 10px 15px 5px 10px;
+  border-radius: 10px;
+}
+
+.done-icon {
   position: absolute;
-  margin: 1px 20px;
+  margin: 8px 20px;
   cursor: pointer;
+}
+
+.done-icon:hover{
+  transform: scale(1.3);
+  transition: 0.3s;
+}
+
+.done-icon:focus{
+  opacity: 0;
+  transform: scale(1.10);
+  
 }
 
 .delete-button {
   font-family: Sono-VariableFont_MONO;
   font-size: 0.93em;
   float: right;
-  margin-top: 0.12em;
+  margin-top: 12px;
   margin-right: 0.93em;
   padding: 0.25em;
   font-weight: bold;
@@ -43,7 +57,6 @@
 }
 
 .delete-button:focus{
-  opacity: 1em;
   opacity: 0;
 }
 
@@ -51,7 +64,7 @@
   font-family: Sono-VariableFont_MONO;
   font-size: 0.937em;
   float: right;
-  margin-top: 0.125em;
+  margin-top: 12px;
   margin-right: 1.25em;
   padding: 0.25em;
   font-weight: bold;
