--- a/src/Components/Content/RenderData/AllTodo/all-todo.scss
+++ b/src/Components/Content/RenderData/AllTodo/all-todo.scss
@@ -88,28 +88,44 @@
 
 .date {
   position: absolute;
-  margin: unset;
-  // margin-left: 1000px;
-  padding-left: 100%;
-  ;
-  font-size: 0.75em;
+  font-size: 18px;
   transition: 0.2s;
+  background-color: #4a4e69;
+  color: white;
+  margin-left: 78px;
+  padding: 5px 10px;
+  border-radius: 10px;
 }
 
 .date:hover {
   font-size: 20px;
-  transform: translateX(-10px);
+  font-weight: bold;
+  transform: translateX(10px);
+  box-shadow: 0px 8px 20px #6c757d;
 }
 
 .time {
+  background-color: #4a4e69;
   position: absolute;
-  font-size: 0.75em;
+  font-size: 18px;
   transition: 0.2s;
-  margin-left: 10%;
+  margin-left: 230px;
+  padding: 5px 10px;
+  border-radius: 10px;
+  color: white;
+
 }
 
 .time:hover {
   font-size: 1.25em;
-  transform: translateX(-20px);
-  transform: translateY(-5px);
+  transform: translateX(10px);
+  box-shadow: 0px 8px 20px #6c757d;
+  font-weight: bold;
+}
+
+.hr-line {
+  position: relative;
+  margin-left: 20px;
+  margin-right: 18px;
+  margin-top: 50px;
 }
